Started adding code for repeater, to list the user's items on their page

--- a/node/views/account.handlebars
+++ b/node/views/account.handlebars
@@ -71,7 +71,19 @@
                 <h2>Your items</h2>
             </div>
 
-            <div class="row item-holder">
+            <div class="row item-holder" id="elem">
+
+                <div class="item-view">
+                    <div class="img-container"></div>
+                    <div class="title-container">
+                        <p class="img-title">test</p>
+                        <p class="comp-type">CPU</p>
+                    </div>
+                    <div class="desc-container">
+                        <p class="desc">description here..dfgfdgfgfgfdgfdgfgfdgfdfdsfdssddg.</p>
+                    </div>
+                </div>
+                <!--
                 <div class="item-view">
                     <img src="img/placeholders/download.jpeg">
                     <p class="img-title">test</p>
@@ -92,9 +104,83 @@
                     <img src="img/placeholders/download.jpeg">
                     <p class="img-title">test</p>
                 </div>
+                -->
+
                 <div class="item-view">
-                    <img src="img/placeholders/download.jpeg">
-                    <p class="img-title">test</p>
+                    <div class="img-container"></div>
+                    <div class="title-container">
+                        <p class="img-title">test</p>
+                        <p class="comp-type">CPU</p>
+                    </div>
+                    <div class="desc-container">
+                        <p class="desc">description here..dfgfdgfgfgfdgfdgfgfdgfdfdsfdssddg.</p>
+                    </div>
+                </div>
+
+                <div class="item-view">
+                    <div class="img-container"></div>
+                    <div class="title-container">
+                        <p class="img-title">test</p>
+                        <p class="comp-type">CPU</p>
+                    </div>
+                    <div class="desc-container">
+                        <p class="desc">description here..dfgfdgfgfgfdgfdgfgfdgfdfdsfdssddg.</p>
+                    </div>
+                </div>
+
+                <div class="item-view">
+                    <div class="img-container"></div>
+                    <div class="title-container">
+                        <p class="img-title">test</p>
+                        <p class="comp-type">CPU</p>
+                    </div>
+                    <div class="desc-container">
+                        <p class="desc">description here..dfgfdgfgfgfdgfdgfgfdgfdfdsfdssddg.</p>
+                    </div>
+                </div>
+
+                <div class="item-view">
+                    <div class="img-container"></div>
+                    <div class="title-container">
+                        <p class="img-title">test</p>
+                        <p class="comp-type">CPU</p>
+                    </div>
+                    <div class="desc-container">
+                        <p class="desc">description here..dfgfdgfgfgfdgfdgfgfdgfdfdsfdssddg.</p>
+                    </div>
+                </div>
+
+                <div class="item-view">
+                    <div class="img-container"></div>
+                    <div class="title-container">
+                        <p class="img-title">test</p>
+                        <p class="comp-type">CPU</p>
+                    </div>
+                    <div class="desc-container">
+                        <p class="desc">description here..dfgfdgfgfgfdgfdgfgfdgfdfdsfdssddg.</p>
+                    </div>
+                </div>
+
+                <div class="item-view">
+                    <div class="img-container"></div>
+                    <div class="title-container">
+                        <p class="img-title">test</p>
+                        <p class="comp-type">CPU</p>
+                    </div>
+                    <div class="desc-container">
+                        <p class="desc">description here..dfgfdgfgfgfdgfdgfgfdgfdfdsfdssddg.</p>
+                    </div>
+                </div>
+
+                <div class="item-view">
+                    <div class="img-container"></div>
+                    <div class="title-container">
+                        <p class="img-title">test</p>
+                        <p class="comp-type">CPU</p>
+                    </div>
+                    <div class="desc-container">
+                        <p class="desc">description here..dfgfdgfgfgfdgfdgfgfdgfdfdsfdssddg.</p>
+                    </div>
                 </div>
 
                 <!-- <ul>
@@ -177,7 +263,40 @@
 
             // stuff here for using stuff from the db and inputting into the appropriate fields on the page
             console.log(list.rows);
-            $("#items").text(list.rows[0].componentID);
+            let items = list.rows;
+
+            /*
+                Testing code for element creation and repeater
+
+            */
+
+                // create the containing element
+
+                var containerDiv = document.createElement("div");
+                $(containerDiv).addClass("item-view");
+                document.getElementById("elem").appendChild(containerDiv);
+
+
+                // create image container
+
+                $(containerDiv).append("<div class=\"img-container\"></div>");
+
+                // and paragraphs, including container
+
+                var title_container = document.createElement("div");
+                $(title_container).addClass("title-container");
+                $(containerDiv).append(title_container);
+
+                var image_title = document.createElement("p");
+                $(image_title).text(items[0].title).addClass("img-title");
+                var component_type = document.createElement("p");
+                $(component_type).text(items[0].componentTypeDescription).addClass("comp-type");
+
+
+                //$(component_type).text(items[0].  this is incomplete and does not work warning - it will add the comp type to the listing
+
+                $(title_container).append(image_title);
+                $(title_container).append(component_type);
 
             // loop through all of the items in the loop and add the details to the appropriate places - these include
             // title, description, type, etc
