--- a/node/views/addItem.handlebars
+++ b/node/views/addItem.handlebars
@@ -60,10 +60,10 @@
                 <div class="input-box">
                     <p>Item type:</p>
                     <select name="itemType">
-                        <option value="cpu">CPU</option>
-                        <option value="gpu">Graphics Card</option>
-                        <option value="ram">RAM</option>
-                        <option value="case">Case</option>
+                        <option value="CPU">CPU</option>
+                        <option value="GPU">Graphics Card</option>
+                        <option value="RAM">RAM</option>
+                        <option value="Case">Case</option>
                     </select>
                 </div>
 
