--- a/node/public/css/account.css
+++ b/node/public/css/account.css
@@ -212,7 +212,38 @@ nav {background-color: #000; }
     float: left;
     margin: 35px;
     width: 300px;
-    height: auto;
+    height: 300px;
+}
+
+
+.img-container {
+    background-image: url("../img/placeholders/download.jpeg");
+    background-size: cover;
+    width: 100%;
+    height: 200px;
+    margin-bottom: 15px;
+    border-radius: 20px;
+}
+
+.title-container {
+    padding-bottom: 3px;
+    border-bottom: 1px solid #ccc;
+}
+
+.desc-container {
+
+    font-size: 75%;
+    margin-top: 10px;
+    color: #888;
+}
+
+
+.img-title {
+    display: inline-block;
+}
+
+.comp-type {
+    float: right;
 }
 
 
