--- a/node/public/css/account.css
+++ b/node/public/css/account.css
@@ -212,7 +212,7 @@ nav {background-color: #000; }
     float: left;
     margin: 35px;
     width: 300px;
-    height: 300px;
+    height: auto;
 }
 
 
@@ -235,6 +235,12 @@ nav {background-color: #000; }
     font-size: 75%;
     margin-top: 10px;
     color: #888;
+}
+
+.desc {
+    height: 2.4em;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 
